# interchain-security-testnet

./: .gitignore  .gitmodules  Dockerfile  echo-caller.sh  echo-test.sh  go.mod  go.sum  notes.md  readme.md  run-testnet.sh  run-tests.sh  start-docker.sh
rust/: Cargo.toml
rust/src/: main.rs  utils.rs
testnet-scripts/: hermes-config.toml  run.sh  setup-validators.sh  start-validators.sh
testnet-scripts/start-chain/: setup-validators.sh  start-chain.sh  start-validators.sh
tests/: actions.go  config.go  go.mod  main.go  state.go  steps.go
tla/: GravityMBT.cfg  GravityMBT.tla  GravityMBTTests.cfg  GravityMBTTests.tla
